# webgpu_fluid

./: Cargo.toml  README.md  license.md
src/: compute_velocity.wgsl  fluid.wgsl  main.rs  render.wgsl  shader.wgsl  util.rs  vertex.rs
