[package]
name = "webgpu_fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.2"
imgui = "0.8.2"
imgui-wgpu = "0.19.0"
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
pollster = "0.2.5"
wgpu = "0.12.0"
winit = {version = "0.26.1", features = ["x11"]}
